k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-fs
  labels:
    app: portfolio-fs
spec:
  type: ClusterIP
  selector:
    app: portfolio-fs
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
